[package]
name = "minuteurs"
version = "1.0.1"
edition = "2021"
authors = ["Maxime BAILLY <maxbailly@hotmail.fr>"]
description = "A small crate to sync threads on periodic events"
keywords = ["timer", "sleep"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Caelmyn/timings"
homepage = "https://github.com/Caelmyn/timings"
documentation = "https://docs.rs/timings"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
